@@ -1,1 +1,1 @@
-SUBDIRS = 16x16 22x22 48x48 scalable
+SUBDIRS = 16x16 22x22 48x48 128x128 scalable
